<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".adminLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="62dp"
            android:layout_marginBottom="34dp"
            android:text="@string/administrative_login"
            android:textAlignment="center"
            android:textColor="#0B0A0A"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="81dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/icon"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.507" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            app:boxBackgroundMode="outline"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adminUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/username"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="326dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="370dp"
            android:gravity="center"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            android:layout_marginStart="10dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:id="@+id/adminPass"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="326dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/adminLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_gravity="bottom"
            android:layout_marginTop="32dp"
            android:background="@drawable/gradient"
            android:text="@string/login_in"
            android:textColor="#090808"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>