<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeMainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"


                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints">

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/input"
                            android:layout_width="160dp"
                            android:layout_height="150dp"
                            android:background="@drawable/input" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:text="@string/input_detail"
                            android:textAlignment="center"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="@drawable/gallery" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:text="@string/gallery"
                            android:textAlignment="center"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/imgAdmin"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="@drawable/admin" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:text="@string/admin"
                            android:textAlignment="center"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="@drawable/booking" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:text="@string/bookings"
                            android:textAlignment="center"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </GridLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>